# dirtree

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dirtree/: __init__.py  cli.py
dirtree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
